Make thread creation more uniform