@@ -2,39 +2,29 @@ package dev.craftlr.exercice1;
 
 public class Main {
 
-    public static void main(String[] args) {
-        try {
-            Thread thread1 = new Thread(Main::tacheThread1);
-            Thread thread2 = new Thread(Main::tacheThread2);
+    public static void main(String[] args) throws InterruptedException {
+        var thread1 = Thread.ofPlatform().start(Main::tacheThread1);
+        var thread2 = Thread.ofPlatform().start(Main::tacheThread2);
 
-            thread1.start();
-            thread2.start();
-
-            thread1.join();
-            thread2.join();
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt(); // Restaure l'état d'interruption
-            System.out.println("Thread interrompu.");
-        }
+        thread1.join();
+        thread2.join();
     }
 
-    static void tacheThread1(){
-        System.out.println("Thread 1 commence à exécuter sa tâche.");
+    static void tacheThread1() {
+        tacheThread(1);
+    }
+
+    static void tacheThread2() {
+        tacheThread(2);
+    }
+
+    private static void tacheThread(int id) {
+        System.out.println(STR."Thread \{id} commence à exécuter sa tâche.");
         // Autres opérations...
         try {
             Thread.sleep(1000);
         } catch (InterruptedException e) {
         }
-        System.out.println("Thread 1 termine d'exécuter sa tâche.");
-    }
-
-    static void tacheThread2(){
-        System.out.println("Thread 2 commence à exécuter sa tâche.");
-        // Autres opérations...
-        try {
-            Thread.sleep(1000);
-        } catch (InterruptedException e) {
-        }
-        System.out.println("Thread 2 termine d'exécuter sa tâche.");
+        System.out.println(STR."Thread \{id} termine d'exécuter sa tâche.");
     }
 }
