@@ -1,24 +1,17 @@
 package dev.craftlr.exercice3;
 
 public class Main {
-    private static int variablePartagee = 0;
     private static final Object verrou = new Object();
+    private static int variablePartagee = 0;
 
-    public static void main(String[] args) {
-        Thread thread1 = new Thread(Main::incrementer);
-        Thread thread2 = new Thread(Main::incrementer);
+    public static void main(String[] args) throws InterruptedException {
+        var thread1 = Thread.ofPlatform().start(Main::incrementer);
+        var thread2 = Thread.ofPlatform().start(Main::incrementer);
 
-        thread1.start();
-        thread2.start();
+        thread1.join();
+        thread2.join();
 
-        try {
-            thread1.join();
-            thread2.join();
-        } catch (InterruptedException e) {
-            e.printStackTrace();
-        }
-
-        System.out.println("Valeur finale de la variable partagée : " + variablePartagee);
+        System.out.println(STR."Valeur finale de la variable partagée : \{variablePartagee}");
     }
 
     static void incrementer() {
